test/good/dictionaries/empty02.px

d: {String:Int}
print d, d.empty
