test/bad/dictionaries/decl01.px

{Int:String} d
d = {"": 0}
